--- a/less/devfest.less
+++ b/less/devfest.less
@@ -11,7 +11,7 @@
 			width: 25% !important;
 			.about-title {
 				font-size: 2em;
-				margin-bottom: 0;
+				margin: 0;
 			}
 		}
 	}
